05. Terraform State/05.1 Example-1_how-to-remove-resource/main.tf
resource "aws_security_group" "terraform-forgot" {
  name        = "terraform-forgot"
  description = "terraform-forgot"
  vpc_id      = "vpc-0a042fbe2928f3bf2"

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["172.31.0.0/16"]
    #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "terrafor-forgot"
  }
}



resource "aws_security_group" "allow_tls" {
  name        = "allow_tls-with-terraform"
  description = "Allow TLS inbound traffic"
  vpc_id      = "vpc-0a042fbe2928f3bf2"

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["172.31.0.0/16"]
    #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
